# DataEngineering-DataTalksClub

./: .gitignore  Makefile  SPARK_SETUP.md  pyproject.toml  spark-env.sh  test_spark.py
06-batch/code/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  08_rdds.ipynb  download_data.sh  homework.ipynb  homework_.ipynb
06-batch/setup/: linux.md
07_streaming/workshop/: mcp.json
