[project]
name = "dataengineering-datatalksclub"
version = "0.1.0"
description = "Data Engineering Zoomcamp - Apache Spark & Data Pipeline Exercises"
requires-python = ">=3.13"
dependencies = [
    "pyspark>=4.1.1",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "kafka-python>=2.3.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]
